# aoc-2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day07_dads.net  day07_dads.py  day08.py  day09.py  dayxx.py
tests/: conftest.py  test_2023.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_dayxx.py
