[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["freddie <freddie.caira@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
word2number = "^1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv tests"
