[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["freddie <freddie.caira@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv -rP -s --ignore-glob=tests/test_dayxx.py"

[tool.mypy]
disallow_untyped_calls = true
disallow_any_generics = true
disallow_untyped_defs = true
